2006-05-23  Paul Eggert  <eggert@cs.ucla.edu>

	* filemode.c: Don't include <string.h>; this include was
	inadvertently put into the previous patch.  Problem noted
	by Jim Meyering.

2006-05-22  Paul Eggert  <eggert@cs.ucla.edu>

	* filemode.c (setst): Remove.
	(strmode): Rewrite to avoid setst.  This makes the code shorter,
	(arguably) clearer, and the generated code is a bit smaller on my
	Debian GNU/Linux stable x86 host.

	Import from gnulib.
	* verify.h: Document the internals better.  Most of this change
	was written by Bruno Haible.

2006-05-21  Jim Meyering  <jim@meyering.net>

	* fts.c (fts_open): Fail with EINVAL if a caller violates this rule:
	Either FTS_LOGICAL or FTS_PHYSICAL must be provided to the
	fts_open() function.

2006-05-19  Paul Eggert  <eggert@cs.ucla.edu>

	* nanosleep.c [HAVE_SYS_SELECT_H]: Include <sys/select.h>.
	Use the usual Autoconf way to include <time.h> and/or sys/time.h.
	(my_usleep): Don't mishandle maximum value.

2006-05-15  Jim Meyering  <jim@meyering.net>

	Avoid the expense of an fstat, when possible.
	* fts.c (O_NOFOLLOW, STREQ): Define.
	(diropen_fd): Remove function.  Merge it into sole caller...
	(diropen): ...here.  Use O_NOFOLLOW when appropriate.
	(fts_safe_changedir): Call fstat for dev/inode check, only if the
	previous open/openat call may have opened the wrong directory.

2006-05-13  Jim Meyering  <jim@meyering.net>

	* xfts.c (xfts_open): Always use FTS_CWDFD.

	Restore the parts of fts that were removed on 2006-01-17, so that
	it's easier for legacy applications designed for the version
	of fts in glibc or BSD to convert to this more robust version.
	Add a new mode, FTS_CWDFD, by which to enable the improved
	(openat- based -- aka no-chdir) semantics.
	* fts_.h (FTS_CWDFD): Define.  Callers must use this fts_open
	option to enable the more robust behavior.
	(FTS_OPTIONMASK): Widen accordingly.
	* fts.c: Restore removed code, reverting the default behavior.

2006-05-11  Jim Meyering  <jim@meyering.net>
